# remusic-svn

audioplayer/releases/0.0.1/: ChangeLog  curses_player.in  devsetup.sh
audioplayer/releases/0.0.1/remus/player/: mp3player.py  player.py  pluginsid.py
audioplayer/releases/0.0.1/src/: remus-player.cc
audioplayer/trunk/: AUTHORS  ChangeLog  MANIFEST.in  Makefile.am  configure.ac  curses_player  curses_player.in  setup.py  setup.py.in
audioplayer/trunk/remus/player/: __init__.py  audioplugin.py  m3u_playlist.py  playlist.py  pluginmp3.py  remus_playlist.py  song.py
audioplayer/trunk/src/: Makefile.am  remus-player.cc
audioripper/trunk/: ripper.py
audiostore/releases/0.3.0/: ChangeLog  Makefile.am  TODO  setup.py.in
audiostore/releases/0.3.0/doc/manual/C/: remus-audiostore-C.omf.in
audiostore/releases/0.3.0/remus/audiostore/: as_collection.py  audiostore.py
audiostore/releases/0.3.0/remus/webdav/: constants.py
audiostore/releases/0.3.0/styles/: audiostore.css  remus.xsl
audiostore/releases/0.4.0/: ChangeLog  MANIFEST.in  NEWS  README  configure.ac  setup.py.in
audiostore/releases/0.4.0/db/: makedot.xsl
audiostore/releases/0.4.0/doc/manual/C/: overview.xml  preface.xml  using.xml
audiostore/releases/0.4.0/remus/audiostore/: __init__.py  as_collection.py  audiostore.py
audiostore/releases/0.4.0/remus/webdav/: propfind.py
audiostore/releases/0.4.0/remus/webserver/: audiostore.py
audiostore/releases/0.4.0/styles/: README  index.html.xsl  l10n.xml  l10n.xsl
audiostore/releases/0.4.0/www/: playlists.rpy
audiostore/releases/0.4.1/: configure.ac  mmpython.patch  setup.py.in
audiostore/releases/0.4.1/doc/manual/C/: Makefile.am
audiostore/releases/0.4.1/po/: POTFILES.in
audiostore/releases/0.4.1/remus/audiostore/: as_collection.py
audiostore/releases/0.4.1/styles/: Makefile.am
audiostore/releases/0.4.2/: ChangeLog  NEWS  audiostore.conf.default  configure.ac
audiostore/releases/0.4.2/db/: Makefile.am
audiostore/releases/0.4.2/po/: remus-audiostore.pot
audiostore/releases/0.4.2/remus/audiostore/: sidinfo.py
audiostore/releases/0.4.3/: ChangeLog  MANIFEST.in
audiostore/releases/0.4.3/db/: Makefile.am
audiostore/releases/0.4.3/remus/audiostore/: audiostore.py
audiostore/releases/0.4.3/styles/: Makefile.am  param.xsl.in
audiostore/releases/0.4.3/styles/locale/: sv.xml
audiostore/trunk/: AUTHORS  ChangeLog  INSTALL  MANIFEST.in  Makefile.am  NEWS  README  TODO  audiostore_resync  configure.ac  devsetup.sh  setup.py  setup.py.in
audiostore/trunk/db/: Makefile.am  audiostore.sql  audiostore.xml  makepython.xsl  makesql.xsl  remus.rdf
audiostore/trunk/doc/: Makefile.am
audiostore/trunk/doc/manual/C/: Makefile.am  database.xml  manual.xml  overview.xml  remus-audiostore-C.omf  using.xml
audiostore/trunk/po/: Makefile.in.in  sv.po
audiostore/trunk/remus/: __init__.py  database.py  db_connect.py
audiostore/trunk/remus/audiostore/: __init__.py  as_collection.py  audiostore.py  metainfo.py  model.py  mysql_filesys.py  query.py  rdf_mapping.py  remus_mb.py  storage.py  webdav_handler.py
audiostore/trunk/remus/i18n/: remus_audiostore.py
audiostore/trunk/remus/rdf/: ns.py
audiostore/trunk/remus/webdav/: webdav_handler.py
audiostore/trunk/remus/webserver/: audiostore.py
audiostore/trunk/remus/webserver/handlers/: audiostore.py
audiostore/trunk/styles/: README  audiostore.css  index.html.xsl  m3u.xsl  param.xsl  param.xsl.in
audiostore/trunk/styles/locale/: en.xml  sv.xml
audiostore/trunk/www/: music.rpy  playlists.rpy
projecttools/releases/0.1.0/doc/mk/: xmldocs.make
projecttools/releases/0.1.1/: README
projecttools/trunk/doc/mk/: omf.make  xmldocs.make
projecttools/trunk/doc/xml/: fdl-appendix.xml  project.ent  project.ent.in
projecttools/trunk/doc/xsl/: Makefile.am
projecttools/trunk/doc/xsl/fo/: Makefile  Makefile.am  general-customization.xsl
projecttools/trunk/doc/xsl/html/: Makefile.am  docbook.css  general-customization.xsl  titlepage.xml
sqlml/releases/0.3.1/: MANIFEST.in  Makefile.am  configure.ac  makedoc.xsl  sqlml.make.in  sqlml.rnc  sqlquery.py
sqlml/releases/0.3.1/example/: orderdb.xml  populate.sql  test.py
sqlml/trunk/: ChangeLog  Makefile.am  NEWS  README  makedot.xsl  makepython.xsl  makesql.xsl  setup.py.in  sqlquery.py
sqlml/trunk/example/: Makefile
webserver/releases/0.1.0/po/: sv.po
webserver/releases/0.1.0/remus/webserver/: remuspage.py  server.py
webserver/releases/0.1.0/www/: index.css  index.rpy
webserver/releases/0.2.0/: ChangeLog  README  remus_server
webserver/releases/0.2.0/po/: Makefile.in  remus-server.pot
webserver/releases/0.2.0/remus/i18n/: remus_server.py
webserver/releases/0.2.0/styles/: remus.css
webserver/releases/0.2.0/trunk/: setup.py
webserver/releases/0.3.0/: ChangeLog  setup.py
webserver/releases/0.3.0/po/: remus-server.pot
webserver/releases/0.3.0/remus/i18n/: Init.py
webserver/releases/0.3.0/remus/webserver/: menu.py  remuspage.py
webserver/releases/0.3.0/styles/: remus.css
webserver/releases/0.3.1/: NEWS  remus.conf.default  setup.py
webserver/releases/0.3.1/remus/i18n/: Init.py  remus_server.py
webserver/releases/0.3.1/remus/webserver/: menu.py  remuspage.py  server.py
webserver/releases/0.3.1/www/: index.rpy
webserver/releases/0.3.2/: remus.conf.default  remus_server.sh  setup.py
webserver/releases/0.3.2/po/: sv.po
webserver/releases/0.3.2/remus/i18n/: __init__.py
webserver/releases/0.3.2/styles/: toppages.css
webserver/releases/0.3.2/www/scripts/: menu.js
webserver/trunk/: ChangeLog  MANIFEST.in  NEWS  remus.conf.default  remus.tac  setup.py
webserver/trunk/po/: POTFILES.in  messages.pot  sv.po
webserver/trunk/remus/: db_connect.py
webserver/trunk/remus/i18n/: Init.py
webserver/trunk/remus/webserver/: __init__.py  remuspage.py  server.py
webserver/trunk/remus/webserver/webdav/: utils.py  webdav.py
webserver/trunk/styles/: menu.css  remus.css
webserver/trunk/www/: RemusPage.html  index.css  index.rpy  lang.rpy
webserver/trunk/www/scripts/: menu.js
(+27 files in other folders)
